[project]
name = "LinupOSAI"
version = "19.1.16-AI"
description = "Linup Roulette Tracker - AI Edition"
requires-python = ">=3.10"
dependencies = ["flet==0.80.5", "reportlab>=4.0.0"]

[tool.flet]
org = "com.linup"
product = "Linup"
company = "Linup"
bundle_id = "com.linup.app"
# App icon is NOT configured here — Flet auto-discovers it by filename
# inside assets/ (icon_macos.png, or icon.png as a cross-platform
# fallback). A top-level `icon = "..."` key here is a no-op.

[tool.flet.macos]
minimum_version = "12.0"
